# fmb

./: CMakeLists.txt  Makefile  build.sh  ctest.sh  fmb  run.sh
src/: fmb.c
tests/: test.sh
